[tool.poetry]
name = "repl_python3_TangibleBlaringToolbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
discord = "^1.0.1"
youtube-dl = "^2021.5.16"
PyNaCl = "^1.4.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
